--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
     /> -->
-    <title>Player Follower</title>
+    <title>Player.fan</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
