--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -33,6 +33,10 @@
       href="https://fonts.googleapis.com/css?family=Quicksand:300,500"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:black"
+      rel="stylesheet"
+    />
     <title>Player Fan</title>
   </head>
   <body>
