--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta
+      name="google-site-verification"
+      content="zdp8J-87I6tRgO5HFtZOmqyiK5ODFpN2IUHBMfSmvhE"
+    />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
