Added google site verif meta tag for http

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,10 @@
       name="google-site-verification"
       content="zdp8J-87I6tRgO5HFtZOmqyiK5ODFpN2IUHBMfSmvhE"
     />
+    <meta
+      name="google-site-verification"
+      content="1ER0wTQWSEWJ9OhbpgHYRsy4mwhlt-x-9Ei7sim7q2I"
+    />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
