--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -38,7 +38,7 @@
     <meta name="msapplication-TileColor" content="#6c81cb" />
     <meta name="theme-color" content="#6c81cb" />
     <link
-      href="https://fonts.googleapis.com/css?family=Quicksand:300,500"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap"
       rel="stylesheet"
     />
     <link
